gramatica.txt
start -> MAIN COLON body


body -> goto body
        | unset body
        | print body
        | exit body
        | tag body
        | if body
        | assign body
        | declaration body


body -> empty


goto -> GOTO NAME SEMICOLON


unset -> UNSET L_PAR TVAR R_PAR SEMICOLON
        | UNSET L_PAR AVAR R_PAR SEMICOLON
        | UNSET L_PAR VVAR R_PAR SEMICOLON
        | UNSET L_PAR SVAR R_PAR SEMICOLON
        | UNSET L_PAR SPVAR R_PAR SEMICOLON
        | UNSET L_PAR RAVAR R_PAR SEMICOLON


print -> PRINT L_PAR TVAR R_PAR SEMICOLON
        | PRINT L_PAR AVAR R_PAR SEMICOLON
        | PRINT L_PAR VVAR R_PAR SEMICOLON
        | PRINT L_PAR SVAR R_PAR SEMICOLON
        | PRINT L_PAR SPVAR R_PAR SEMICOLON
        | PRINT L_PAR RAVAR R_PAR SEMICOLON


print -> PRINT L_PAR TVAR L_BRACKET arithmetic R_BRACKET R_PAR SEMICOLON
        | PRINT L_PAR AVAR L_BRACKET arithmetic R_BRACKET R_PAR SEMICOLON
        | PRINT L_PAR VVAR L_BRACKET arithmetic R_BRACKET R_PAR SEMICOLON
        | PRINT L_PAR SVAR L_BRACKET arithmetic R_BRACKET R_PAR SEMICOLON
        | PRINT L_PAR SPVAR L_BRACKET arithmetic R_BRACKET R_PAR SEMICOLON
        | PRINT L_PAR RAVAR L_BRACKET arithmetic R_BRACKET R_PAR SEMICOLON


print -> PRINT L_PAR STRING R_PAR SEMICOLON


exit -> EXIT SEMICOLON


tag -> NAME COLON


if -> IF L_PAR condition R_PAR GOTO NAME SEMICOLON


condition -> condition AND condition
        | condition OR condition


condition -> NOT condition


condition -> relational


relational -> arithmetic EQUAL arithmetic
            | arithmetic NOT_EQUAL arithmetic
            | arithmetic GREATER arithmetic
            | arithmetic LESS arithmetic
            | arithmetic GREATER_EQUAL arithmetic
            | arithmetic LESS_EQUAL arithmetic


relational -> arithmetic


arithmetic -> arithmetic PLUS arithmetic
            | arithmetic MINUS arithmetic
            | arithmetic MULTIPLY arithmetic
            | arithmetic DIVIDE arithmetic
            | arithmetic REMAINDER arithmetic


arithmetic -> INTEGER
            | DECIMAL
            | STRING
            | var
            | array_access


arithmetic -> MINUS arithmetic


var -> TVAR
| AVAR
| VVAR
| SVAR
| RAVAR
| SPVAR


array_access -> 

assign -> TVAR ASSIGN condition SEMICOLON
        | AVAR ASSIGN condition SEMICOLON
        | VVAR ASSIGN condition SEMICOLON
        | SVAR ASSIGN condition SEMICOLON


assign -> TVAR ASSIGN conversion SEMICOLON
        | AVAR ASSIGN conversion SEMICOLON
        | VVAR ASSIGN conversion SEMICOLON
        | SVAR ASSIGN conversion SEMICOLON


assign -> TVAR ASSIGN READ L_PAR R_PAR SEMICOLON
        | AVAR ASSIGN READ L_PAR R_PAR SEMICOLON
        | VVAR ASSIGN READ L_PAR R_PAR SEMICOLON
        | SVAR ASSIGN READ L_PAR R_PAR SEMICOLON


assign -> TVAR ASSIGN bitwise SEMICOLON
        | AVAR ASSIGN bitwise SEMICOLON
        | VVAR ASSIGN bitwise SEMICOLON
        | SVAR ASSIGN bitwise SEMICOLON


assign -> TVAR L_BRACKET arithmetic R_BRACKET ASSIGN condition SEMICOLON
        | AVAR L_BRACKET arithmetic R_BRACKET ASSIGN condition SEMICOLON
        | VVAR L_BRACKET arithmetic R_BRACKET ASSIGN condition SEMICOLON
        | SVAR L_BRACKET arithmetic R_BRACKET ASSIGN condition SEMICOLON
        | SPVAR L_BRACKET arithmetic R_BRACKET ASSIGN condition SEMICOLON
        | RAVAR L_BRACKET arithmetic R_BRACKET ASSIGN condition SEMICOLON


assign -> TVAR ASSIGN ABS L_PAR var R_PAR SEMICOLON
        | AVAR ASSIGN ABS L_PAR  var R_PAR SEMICOLON
        | VVAR ASSIGN ABS L_PAR var R_PAR SEMICOLON
        | SVAR ASSIGN ABS L_PAR var R_PAR SEMICOLON


bitwise -> var AND_B var
        | var OR_B var
        | var XOR_B var
        | var SHIFT_L var
        | var SHIFT_R var


bitwise -> NOT_B TVAR
        | NOT_B AVAR
        | NOT_B VVAR
        | NOT_B SVAR


conversion -> L_PAR type R_PAR var


type -> INT
    | FLOAT
    | CHAR


declaration -> var


declaration -> TVAR ASSIGN ARRAY L_PAR R_PAR SEMICOLON
            | AVAR ASSIGN ARRAY L_PAR R_PAR SEMICOLON
            | VVAR ASSIGN ARRAY L_PAR R_PAR SEMICOLON
            | SVAR ASSIGN ARRAY L_PAR R_PAR SEMICOLON
            | SPVAR ASSIGN ARRAY L_PAR R_PAR SEMICOLON
            | RAVAR ASSIGN ARRAY L_PAR R_PAR SEMICOLON


declaration -> TVAR L_BRACKET arithmetic R_BRACKET SEMICOLON
            | AVAR L_BRACKET arithmetic R_BRACKET SEMICOLON
            | VVAR L_BRACKET arithmetic R_BRACKET SEMICOLON
            | SVAR L_BRACKET arithmetic R_BRACKET SEMICOLON
            | SPVAR L_BRACKET arithmetic R_BRACKET SEMICOLON
            | RAVAR L_BRACKET arithmetic R_BRACKET SEMICOLON


empty -> epsilon
